refactor: 코드 리팩토링 및 정리 (#97)
- PaymentService: 미사용 Set import 제거, toList() 사용
- User.deductPoints(): IllegalStateException → GeneralException 통일
- 빈 패키지 디렉토리 제거 (product/controller, product/dto, stock/controller)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>